Added the ability to calculate latlong and distance